k8s/applications/media/arr/qbittorrent/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: arr
spec:
  clusterIP: None
  type: ClusterIP
  selector:
    app: qbittorrent
  ports:
    - name: http
      port: 8090
      targetPort: http
    - name: bittorrent-tcp
      port: 65211
      targetPort: bittorrent-tcp
      protocol: TCP
    - name: bittorrent-udp
      port: 65211
      targetPort: bittorrent-udp
      protocol: UDP
