k8s/applications/media/arr/qbittorrent/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent
  namespace: arr
spec:
  parentRefs:
    - name: internal
      namespace: gateway
    - name: envoy-internal
      namespace: network
  hostnames:
    - torrent.k8s.eudald.gr
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: qbittorrent
          port: 8090
