k8s/applications/media/arr/qbittorrent/tcp-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: qbittorrent-peer
  namespace: arr
spec:
  parentRefs:
    - name: tls-passthrough
      namespace: gateway
      sectionName: qbittorrent-peer-tcp
  rules:
    - backendRefs:
        - name: qbittorrent
          port: 65211
